--- a/style.css
+++ b/style.css
@@ -39,3 +39,37 @@ body{
     color: white;
     background-color: grey;
 }
+form{
+    background-color: hsl(0, 0%, 95%);
+    text-align: center;
+    max-width: 350px;
+    margin: auto;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px hsla(0, 0%, 0%, 0.3);
+}
+#tempInput{
+    width: 30%;
+    text-align: center;
+    font-size: 2em;
+    border: hsla(0, 0%, 100%, 0);
+    margin-bottom: 15px;
+}
+#conversion{
+    font-size: 1em;
+    font-weight: bold;
+}
+#convertBtn{
+    margin-top: 15px;
+    color: white;
+    background-color: hsl(345, 88%, 27%);
+    font-size: 1.5em;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#convertBtn:hover{
+    color: black;
+    background-color: hsl(192, 53%, 43%);
+}
